--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,11 @@
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
 
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=airport_shuttle" />
+ 
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=clear_all" />
+ 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
   <link rel="stylesheet" href="https://unpkg.com/ionic@latest/dist/css/ionic.css" />
   <script src="https://unpkg.com/ionic@latest/dist/ionic.js"></script>
